@@ -20,6 +20,7 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import checkers.inference.InferenceOptions.InitStatus;
+import org.plumelib.util.StringsPlume;
 
 
 /**
@@ -61,7 +62,7 @@ public class InferenceLauncher {
 
         } catch (IllegalArgumentException iexc) {
             outStream.println("Could not recognize mode: " + InferenceOptions.mode + "\n"
-                    + "valid modes: " + SystemUtil.join(", ", Mode.values()));
+                    + "valid modes: " + StringsPlume.join(", ", Mode.values()));
             System.exit(1);
         }
 
@@ -138,7 +139,7 @@ public class InferenceLauncher {
 
         if (InferenceOptions.printCommands) {
             outStream.println("Running typecheck command:");
-            outStream.println(SystemUtil.join(" ", checkerMain.getExecArguments()));
+            outStream.println(String.join(" ", checkerMain.getExecArguments()));
         }
 
         int result = checkerMain.invokeCompiler();
@@ -165,6 +166,19 @@ public class InferenceLauncher {
             argList.add("-Xbootclasspath/p:" + bcp);
         }
 
+        if (SystemUtil.jreVersion > 8) {
+            // Keep in sync with build.gradle
+            argList.addAll(Arrays.asList("--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"));
+        }
+
         argList.add("-classpath");
         argList.add(getInferenceRuntimeClassPath());
 
@@ -189,6 +203,15 @@ public class InferenceLauncher {
 
         addIfTrue("--hacks", InferenceOptions.hacks, argList);
 
+        Mode mode = Mode.valueOf(InferenceOptions.mode);
+        if (InferenceOptions.makeDefaultsExplicit
+                && (mode == Mode.ROUNDTRIP || mode == Mode.ROUNDTRIP_TYPECHECK)) {
+            // Two conditions have to be met to make defaults explicit:
+            // 1. the command-line flag `makeDefaultsExplicit` is provided
+            // 2. the inference solution will be written back to the source code (roundtrip `mode`)
+            argList.add("--makeDefaultsExplicit");
+        }
+
         argList.add("--");
 
         String compilationBcp = getInferenceCompilationBootclassPath();
@@ -205,7 +228,7 @@ public class InferenceLauncher {
 
         if (InferenceOptions.printCommands) {
             outStream.println("Running infer command:");
-            outStream.println(SystemUtil.join(" ", argList));
+            outStream.println(String.join(" ", argList));
         }
 
         int result = ExecUtil.execute(argList.toArray(new String[argList.size()]), outStream, System.err);
@@ -280,7 +303,7 @@ public class InferenceLauncher {
 
             if (InferenceOptions.printCommands) {
                 outStream.println("Running Insert Annotations Command:");
-                outStream.println(SystemUtil.join(" ", options));
+                outStream.println(String.join(" ", options));
             }
 
             // this can get quite large for large projects and it is not advisable to run
@@ -308,7 +331,7 @@ public class InferenceLauncher {
 
             if (InferenceOptions.printCommands) {
                 outStream.println("Running Insert Annotations Command:");
-                outStream.println(SystemUtil.join(" ", options));
+                outStream.println(StringsPlume.join(" ", options));
             }
 
             result = ExecUtil.execute(options, outStream, errStream);
@@ -423,7 +446,7 @@ public class InferenceLauncher {
             filePaths.add(systemClasspath);
         }
 
-        return SystemUtil.join(File.pathSeparator, filePaths);
+        return String.join(File.pathSeparator, filePaths);
     }
 
     // what the compiler compiles against
